--- a/talleres/t01-python/Practico_Bono_1.ipynb
+++ b/talleres/t01-python/Practico_Bono_1.ipynb
@@ -2,6 +2,23 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h1>Procesamiento de Datos a Gran Escala</h1>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Fecha: 4 de febrero de 2026\n",
+        "#### Autor: Daniel Felipe Castro Moreno\n",
+        "#### Tema: Práctica\n",
+        "#### Objetivo: Realizar distintos ejercicios sobre los temas aprendidos."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "dkfTfb7kKfO8"
       },
@@ -22,22 +39,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "HF8_a_2IKfO8"
       },
       "outputs": [],
       "source": [
         "def lesser_of_two_evens(a,b):\n",
-        "    pass\n",
-        "    #Colocar aqui la respuesta\n",
-        "        \n",
+        "    if a%2 == 0 and b%2 == 0: # Ambos pares\n",
+        "        if a > b:\n",
+        "            return b\n",
+        "        else:\n",
+        "            return a\n",
+        "    else: # Uno o ambos impares\n",
+        "        if a > b:\n",
+        "            return a\n",
+        "        else:\n",
+        "            return b\n",
         "        "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "fOv0K9mXKfO9",
         "outputId": "b22f779c-6706-4ede-95cc-c140ad565be1"
@@ -49,7 +73,7 @@
               "2"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -61,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "UMKYl4NgKfO-",
         "outputId": "9c980845-33dc-4af5-e00f-941bc34c9158"
@@ -73,7 +97,7 @@
               "5"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -103,12 +127,15 @@
       "outputs": [],
       "source": [
         "def animal_crackers(text):\n",
-        "  pass"
+        "  splitText = text.split() # Separar por espacio\n",
+        "  if splitText[0][0] == splitText[1][0]: # Verificar primer caracter de cada palabra\n",
+        "    return True\n",
+        "  return False"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "RZp5N4-6KfO_",
         "outputId": "6d328ca9-266d-48c7-f676-b754ef7ed006"
@@ -120,7 +147,7 @@
               "True"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -132,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "zaGYt5L8KfO_",
         "outputId": "4b223142-b306-4b30-ac82-0231c9bba8ae"
@@ -144,7 +171,7 @@
               "False"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -176,12 +203,12 @@
       "outputs": [],
       "source": [
         "def makes_twenty(n1,n2):\n",
-        "  pass"
+        "  return n1 + n2 == 20 or n1 == 20 or n2 == 20 # Verificar si alguno de los dos o su suma es 20"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "6jHiJxnwKfPA",
         "outputId": "9a14cffb-0f72-48c1-8619-7cfe26264915"
@@ -193,7 +220,7 @@
               "True"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -205,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "zZIdlGLeKfPA",
         "outputId": "9272422f-c012-4f4e-d8e6-a64deeaafffe"
@@ -217,7 +244,7 @@
               "False"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -229,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "BlJKTZX9KfPA",
         "outputId": "b973ebc9-e1c8-4a27-be98-968b062356c8"
@@ -241,7 +268,7 @@
               "True"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -281,12 +308,12 @@
       "outputs": [],
       "source": [
         "def old_macdonald(name):\n",
-        "    pass"
+        "    return name[:3].capitalize() + name[3:].capitalize() # Primera y cuarta letra en mayúscula"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "wtu_baYIKfPB",
         "outputId": "4e8b6e19-7e9e-4c6d-99df-63ec5d984748"
@@ -298,7 +325,7 @@
               "'MacDonald'"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -339,35 +366,13 @@
       "outputs": [],
       "source": [
         "def master_yoda(text):\n",
-        "    pass"
+        "    words = text.split() # Separar por espacio\n",
+        "    return \" \".join(words[::-1]) # Invertir\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "BXdDWf0BKfPC",
-        "outputId": "4e2b64a8-2717-4afd-e283-ecd1fa6b6cbe"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['home', 'am', 'I']"
-            ]
-          },
-          "execution_count": 50,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "######"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "2DqSErszKfPD",
         "outputId": "d49d92dd-11d7-4b81-c69d-c8695193eb19"
@@ -379,7 +384,7 @@
               "'home am I'"
             ]
           },
-          "execution_count": 56,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -391,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "efa9vdLSKfPD",
         "outputId": "4837b3d4-249c-4803-8b64-93b3ca51fc6d"
@@ -403,7 +408,7 @@
               "'ready are We'"
             ]
           },
-          "execution_count": 57,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -446,12 +451,17 @@
       "outputs": [],
       "source": [
         "def has_33(nums):\n",
-        "    pass"
+        "    i = 0 # Iterador\n",
+        "    while i < len(nums) - 1: # Recorrer la lista hasta el penúltimo elemento\n",
+        "        if nums[i] == 3 and nums[i+1] == 3: # Consecutivos con valor 3\n",
+        "            return True\n",
+        "        i = i + 1 # Aumentar iterador\n",
+        "    return False"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
         "id": "Yca9X7MAKfPE",
         "outputId": "42c708a5-04ed-43e3-e8ec-295f48027f0c"
@@ -463,7 +473,7 @@
               "True"
             ]
           },
-          "execution_count": 65,
+          "execution_count": 49,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -475,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
         "id": "XSw1ml9dKfPE",
         "outputId": "57e4fb93-4218-493c-992b-db6ebba0c5c1"
@@ -487,7 +497,7 @@
               "False"
             ]
           },
-          "execution_count": 66,
+          "execution_count": 50,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -499,7 +509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "id": "ZKcJgxc5KfPF",
         "outputId": "34957a99-b52c-44cd-bc7c-b0e5158ccf23"
@@ -511,7 +521,7 @@
               "False"
             ]
           },
-          "execution_count": 67,
+          "execution_count": 51,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -541,26 +551,26 @@
       "outputs": [],
       "source": [
         "def paper_doll(text):\n",
-        "    pass"
+        "    newText = \"\" # Nueva cadena\n",
+        "    for char in text: # Por cada caracter\n",
+        "        newText = newText + char*3 # Repetir el caracter 3 veces\n",
+        "    print(newText)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
         "id": "h330yUbKKfPF",
         "outputId": "169efcdf-a2d5-4eaa-d0f4-295f84a4f5e9"
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "'HHHeeellllllooo'"
-            ]
-          },
-          "execution_count": 74,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "HHHeeellllllooo\n"
+          ]
         }
       ],
       "source": [
@@ -570,21 +580,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
         "id": "sZTw8FlZKfPF",
         "outputId": "e7dc07c0-e048-4b25-ffcb-a5e4aeeebb42"
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "'MMMiiissssssiiissssssiiippppppiii'"
-            ]
-          },
-          "execution_count": 75,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "MMMiiissssssiiissssssiiippppppiii\n"
+          ]
         }
       ],
       "source": [
@@ -613,12 +620,17 @@
       "outputs": [],
       "source": [
         "def blackjack(a,b,c):\n",
-        "    pass"
+        "    sum = a + b + c # Suma\n",
+        "    if sum > 21 and (a == 11 or b == 11 or c == 11): # Si la suma es mayor a 21 y al menos uno de los valores es 11\n",
+        "        sum = sum - 10 # Restar 10\n",
+        "    if sum > 21: # Si la suma es mayor a 21\n",
+        "        return \"BUST\"\n",
+        "    return sum"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 83,
       "metadata": {
         "id": "D_sHnddYKfPF",
         "outputId": "fc7e06b6-dedc-44db-967b-d2bcae8566da"
@@ -630,7 +642,7 @@
               "18"
             ]
           },
-          "execution_count": 78,
+          "execution_count": 83,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -642,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 84,
       "metadata": {
         "id": "y0713b36KfPF",
         "outputId": "278287b5-0843-4056-da0b-ed5d8b382b7d"
@@ -654,7 +666,7 @@
               "'BUST'"
             ]
           },
-          "execution_count": 79,
+          "execution_count": 84,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -666,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 85,
       "metadata": {
         "id": "6eijyrH-KfPG",
         "outputId": "68421178-7dc7-439f-e433-ce567b999dd6"
@@ -678,7 +690,7 @@
               "19"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 85,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -696,11 +708,23 @@
       "source": [
         "## Suerte!"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Conclusión\n",
+        "A través de estos ejercicios se reforzó el uso de funciones, condicionales, bucles y operaciones con cadenas y listas en Python, aplicando la lógica de programación para resolver problemas prácticos y fortalecer la comprensión de los conceptos fundamentales del lenguaje."
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "name": "Practico_Bono_1(E).ipynb",
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -714,11 +738,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
-    },
-    "colab": {
-      "name": "Practico_Bono_1(E).ipynb",
-      "provenance": []
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
